--- a/pom.xml
+++ b/pom.xml
@@ -62,6 +62,16 @@
     <artifactId>log4j-api</artifactId>
     <version>2.6.1</version>
   </dependency>
+  		<dependency>
+	<groupId>org.springframework.security</groupId>
+	<artifactId>spring-security-web</artifactId>
+	<version>3.2.3.RELEASE</version>
+</dependency>
+<dependency>
+	<groupId>org.springframework.security</groupId>
+	<artifactId>spring-security-config</artifactId>
+	<version>3.2.3.RELEASE</version>
+</dependency>
         <dependency>
             <groupId>org.jadira.usertype</groupId>
             <artifactId>usertype.core</artifactId>
