--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -35,7 +35,7 @@
 	-->
     <context-param>
         <param-name>contextConfigLocation</param-name>
-        <param-value>classpath:spring/business-config.xml, classpath:spring/tools-config.xml</param-value>
+        <param-value>classpath:spring/business-config.xml, classpath:spring/tools-config.xml, classpath:spring/spring-security.xml</param-value>
     </context-param>
 
     <listener>
@@ -109,6 +109,16 @@
         <filter-name>datatables</filter-name>
         <url-pattern>/*</url-pattern>
     </filter-mapping>
+    <filter>
+		<filter-name>springSecurityFilterChain</filter-name>
+		<filter-class>org.springframework.web.filter.DelegatingFilterProxy
+		</filter-class>
+	</filter>
+
+	<filter-mapping>
+		<filter-name>springSecurityFilterChain</filter-name>
+		<url-pattern>/*</url-pattern>
+	</filter-mapping>
 
     <!--  	No need for welcome-file declaration here.
     		See inside spring/mvc-core-config.xml : 
